# Nexus

./: .gitignore  README.md  create_icon.py  index.html  package-lock.json  package.json  tailwind.config.js
.sisyphus/evidence/: task-1-baseline-check.txt  task-2-progress-rubric.txt  task-3-scope-guard.txt  task-7-term-consistency.txt
.sisyphus/plans/: project-md-progress-roadmap-optimization.md  task-topic-improvements.md
docs/: DESIGN_SYSTEM.md  PROJECT.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md
src-tauri/src/: main.rs
src-tauri/src/commands/: config.rs  hotkey.rs  mod.rs  task.rs  topic.rs  tray.rs  window.rs
src-tauri/src/db/: mod.rs
src-tauri/src/models/: mod.rs  task.rs  topic.rs
src-tauri/src/services/: ai_service.rs  insight_service.rs  mod.rs  scheduler.rs  task_service.rs  topic_service.rs
src/components/insight/: InsightPanel.tsx  index.ts
src/components/omni-bar/: IntentPreview.tsx  OmniBar.tsx  index.ts
src/components/settings/: Settings.tsx
src/components/stats/: StatsPanel.tsx
src/components/task/: TaskCard.tsx  TaskCreateDialog.tsx  TaskEditDialog.tsx  TaskList.tsx
src/components/topic/: TopicSelector.tsx  TopicSidebar.tsx  index.ts
src/components/ui/: icons.tsx
src/components/widget/: Widget.tsx
src/hooks/: useAI.ts
src/stores/: taskDraftStore.ts  taskStore.ts  topicStore.ts
src/types/: index.ts
src/utils/: color.ts
